--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   </head>
   <body>
     <article>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      Hola Naty, esto es un coso que inventó Pat pata ti (gif koala)
     </article>
     <section>
-      <button type="button" name="Opcion1">Opcion1<span></span></button>
-      <button type="button" name="Opcion2">Opcion2<span></span></button>
+      <button type="button" name="Opcion1">Comer pingüinos<span></span></button>
+      <button type="button" name="Opcion2">Comer con pingüinos<span></span></button>
     </section>
     <footer>All rights reserved Les Comofuncioners©</footer>
   </body>
