--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <title>Elige tu propia aventura</title>
   </head>
   <body>
-    <article>
-      Hola Naty, esto es un coso que inventó Pat pata ti (gif koala)
-    </article>
+    <article>Hola Naty, esto es un coso que inventó Pat pata ti (gif koala)</article>
     <section>
       <button type="button" name="Opcion1">Comer pingüinos<span></span></button>
       <button type="button" name="Opcion2">Comer con pingüinos<span></span></button>
