otra más, casi llegamos al final

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
       <button type="button" name="Opcion1">Comer pingüinos<span></span></button>
       <button type="button" name="Opcion2">Comer con pingüinos<span></span></button>
     </section>
-    <footer>All rights reserved Les Comofuncioners©</footer>
+    <footer><a href="https://t.me/comosediscutenlascosas">All rights reserved Les Comofuncioners©</a></footer>
   </body>
 </html>
