pantalla de incio #1

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <title>Elige tu propia aventura</title>
   </head>
   <body>
+
+    <!-- ventana de inicio -->
+    <aside >
+      <img src="logo.svg">
+      <p>Bienvenide al juego de tu natalicio, pulsá aceptar para continuar.</p>
+      <div>
+        <button type="button" name="aceptar">aceptar</button>
+        <button type="button" name="cancelar">cancelar</button>
+      </div>
+    </aside>
+
+    <!-- aventura -->
     <article>Hola Naty, esto es un coso que inventó Pat pata ti (gif koala)</article>
     <section>
       <button type="button" name="Opcion1">Comer pingüinos<span></span></button>
