por lo menos se mueve

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="icon.png" type="image.png">
-    <script type="text/javascript" src="scrit.js"></script>
+    <script type="text/javascript" src="script.js"></script>
     <title>Elige tu propia aventura</title>
   </head>
   <body>
@@ -16,7 +16,7 @@
       <img src="logo.svg">
       <p>Bienvenide al juego de tu natalicio, pulsá aceptar para continuar.</p>
       <div>
-        <button type="button" name="aceptar">aceptar</button>
+        <button id="aceptar" onclick="myFunction()" type="button" name="aceptar">aceptar</button>
         <button type="button" name="cancelar">cancelar</button>
       </div>
     </aside>
