--- a/index.html
+++ b/index.html
@@ -10,23 +10,33 @@
     <title>Elige tu propia aventura</title>
   </head>
   <body>
-
     <!-- ventana de inicio -->
-    <aside >
+    <aside>
       <img src="logo.svg">
       <p>Bienvenide al juego de tu natalicio, pulsá aceptar para continuar.</p>
       <div>
-        <button id="aceptar" onclick="myFunction()" type="button" name="aceptar">aceptar</button>
+        <button onclick="myFunction()" type="button" name="aceptar">aceptar</button>
         <button type="button" name="cancelar">cancelar</button>
       </div>
     </aside>
 
     <!-- aventura -->
-    <article>Hola Naty, esto es un coso que inventó Pat pata ti (gif koala)</article>
     <section>
+
+    <article>
+      Hola Naty, esto es un coso que inventó Pat pata ti (gif koala). Tengo que probar las tres lineas xq pat dice que las preguntas o no se como es que se van a llamar, son largas. Y todavia no llego a las tres lineas me quiero matar ahre, saludos al que lea esto.
+    </article>
+    <!-- esto deberia modificarse en el transcurso del juego -->
+
+    <form>
+      <!-- aqui los botones principales -->
       <button type="button" name="Opcion1">Comer pingüinos<span></span></button>
       <button type="button" name="Opcion2">Comer con pingüinos<span></span></button>
+    </form>
+
     </section>
+
+    <!-- el fin -->
     <footer><a href="https://t.me/comosediscutenlascosas">All rights reserved Les Comofuncioners©</a></footer>
   </body>
 </html>
