--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <!-- ventana de inicio -->
     <aside>
       <img src="logo.svg">
-      <p>Bienvenide al juego de tu natalicio, pulsá aceptar para continuar.</p>
+      <p>Bienvenide al juego de tu natalicio. <br> Pulsá aceptar para continuar.</p>
       <div>
-        <button onclick="myFunction()" type="button" name="aceptar">aceptar</button>
+        <button type="button" name="aceptar">aceptar</button>
         <button type="button" name="cancelar">cancelar</button>
       </div>
     </aside>
