Prueba de vida #1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- ventana de inicio -->
     <aside>
       <img src="logo.svg">
-      <p>Bienvenide al juego de tu natalicio. <br> Pulsá aceptar para continuar.</p>
+      <p>Bienvenida al juego<br>de tu natalicio.<br>Pulsá aceptar para continuar.</p>
       <div>
         <button type="button" name="aceptar">aceptar</button>
         <button type="button" name="cancelar">cancelar</button>
@@ -30,8 +30,8 @@
 
     <form>
       <!-- aqui los botones principales -->
-      <button type="button" name="Opcion1">Comer pingüinos<span></span></button>
-      <button type="button" name="Opcion2">Comer con pingüinos<span></span></button>
+      <button type="button" name="Opcion1">Comer pingüinos</button>
+      <button type="button" name="Opcion2">Comer con pingüinos</button>
     </form>
 
     </section>
