--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <!-- esto deberia funcionar -->
 <html>
   <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="icon.png" type="image.png">
-    <script type="text/javascript" src="script.js"></script>
     <title>Elige tu propia aventura</title>
   </head>
   <body>
     <!-- ventana de inicio -->
     <aside>
       <img src="logo.svg">
-      <p>Bienvenida al juego<br>de tu natalicio.<br>Pulsá aceptar para continuar.</p>
+      <p>Bienvenida al juego<br>de tu natalicio.</p>
+      <span>Pulsá aceptar para continuar.</span>
       <div>
         <button type="button" name="aceptar">aceptar</button>
         <button type="button" name="cancelar">cancelar</button>
@@ -22,7 +22,7 @@
 
     <!-- aventura -->
     <section>
-
+    <!-- por que usas esa etiqueta man?? -->
     <article>
       Hola Naty, esto es un coso que inventó Pat pata ti (gif koala). Tengo que probar las tres lineas xq pat dice que las preguntas o no se como es que se van a llamar, son largas. Y todavia no llego a las tres lineas me quiero matar ahre, saludos al que lea esto.
     </article>
@@ -39,4 +39,5 @@
     <!-- el fin -->
     <footer><a href="https://t.me/comosediscutenlascosas">All rights reserved Les Comofuncioners©</a></footer>
   </body>
+  <script type="text/javascript" src="script.js"></script>
 </html>
