tenemos las cosas

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     </aside>
 
     <!-- aventura -->
-    <section>
+      <video src="Ale.mp4"></video>
+      <section>
     <!-- por que usas esa etiqueta man?? -->
     <article>
       Hola Naty, esto es un coso que inventó Pat pata ti (gif koala). Tengo que probar las tres lineas xq pat dice que las preguntas o no se como es que se van a llamar, son largas. Y todavia no llego a las tres lineas me quiero matar ahre, saludos al que lea esto.
