--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <!-- aventura -->
       <video src="Ale.mp4"></video>
+      <!-- video de prueba -->
       <section>
     <!-- por que usas esa etiqueta man?? -->
     <article>
