pone bien el link ramiro

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </aside>
 
     <!-- aventura -->
-      <video src="Ale.mp4"></video>
+      <video src="assets/Ale.mp4"></video>
       <!-- video de prueba -->
       <section>
     <!-- por que usas esa etiqueta man?? -->
