--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     </aside>
 
     <!-- aventura -->
-      <video src="assets/Ale.mp4"></video>
+      <video autoplay loop controls>
+        <source src="assets/Ale.mp4" type="video/mp4">
+      </video>
       <!-- video de prueba -->
       <section>
     <!-- por que usas esa etiqueta man?? -->
