Agrego: jquery-nuevas carpetas-templates en documentacion\n Edito index.html para agregar jquery

--- a/index.html
+++ b/index.html
@@ -44,4 +44,5 @@
     <footer><a href="https://t.me/comosediscutenlascosas">All rights reserved Les Comofuncioners©</a></footer>
   </body>
   <script type="text/javascript" src="script.js"></script>
+  <script src="assets/scripts/jquery-3.4.1.min.js"></script>
 </html>
