Muevo scripts.js a la carpeta de scripts(Rejodidoelpibe)

--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
     <!-- el fin -->
     <footer><a href="https://t.me/comosediscutenlascosas">All rights reserved Les Comofuncioners©</a></footer>
   </body>
-  <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="assets/scripts/script.js"></script>
   <script src="assets/scripts/jquery-3.4.1.min.js"></script>
 </html>
