Funcion CambioDeDiapo. \n Dato curioso: 7% de los adultos americanos piensan que la leche chocolatada viene de vacas marrones

--- a/index.html
+++ b/index.html
@@ -45,4 +45,5 @@
   </body>
   <script type="text/javascript" src="assets/scripts/script.js"></script>
   <script src="assets/scripts/jquery-3.4.1.min.js"></script>
+  <script src="assets/scripts/CambioDeDiapo.js"></script>
 </html>
