algunas cositas son grandes y otras chiquitas

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Elige tu propia aventura</title>
   </head>
   <body>
+
     <!-- ventana de inicio -->
     <aside>
       <img src="logo.svg">
@@ -21,29 +22,41 @@
     </aside>
 
     <!-- aventura -->
-      <video autoplay loop controls>
-        <source src="assets/Ale.mp4" type="video/mp4">
-      </video>
-      <!-- video de prueba -->
-      <section>
-    <!-- por que usas esa etiqueta man?? -->
-    <article>
-      Hola Naty, esto es un coso que inventó Pat pata ti (gif koala). Tengo que probar las tres lineas xq pat dice que las preguntas o no se como es que se van a llamar, son largas. Y todavia no llego a las tres lineas me quiero matar ahre, saludos al que lea esto.
-    </article>
-    <!-- esto deberia modificarse en el transcurso del juego -->
 
-    <form>
-      <!-- aqui los botones principales -->
-      <button type="button" name="Opcion1">Comer pingüinos</button>
-      <button type="button" name="Opcion2">Comer con pingüinos</button>
-    </form>
+    <!-- video flotando simulando background -->
+    <video autoplay loop controls>
+      <source src="assets/Ale.mp4" type="video/mp4">
+    </video>
 
+    <!-- inicio de lo puntual -->
+    <section>
+      <article>
+        Hola Naty, esto es un coso que inventó Pat pata ti (gif koala). Tengo que probar las tres lineas xq pat dice que las preguntas o no se como es que se van a llamar, son largas. Y todavia no llego a las tres lineas me quiero matar ahre, saludos al que lea esto.
+      </article>
+      <form>
+        <button type="button" name="Opcion1">Comer pingüinos</button>
+        <button type="button" name="Opcion2">Comer con pingüinos</button>
+      </form>
     </section>
 
     <!-- el fin -->
-    <footer><a href="https://t.me/comosediscutenlascosas">All rights reserved Les Comofuncioners©</a></footer>
+    <footer>
+      <a href="https://t.me/comosediscutenlascosas">All rights reserved Les Comofuncioners©</a>
+    </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+  <!-- aqui los hidden -->
   </body>
   <script type="text/javascript" src="assets/scripts/script.js"></script>
   <script src="assets/scripts/jquery-3.4.1.min.js"></script>
-  <script src="assets/scripts/CambioDeDiapo.js"></script>
 </html>
