test de funcion para cambio de diapo

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 
     <!-- inicio de lo puntual -->
     <section>
-      <article>
+      <article id="mainText">
         Hola Naty, esto es un coso que inventó Pat pata ti (gif koala). Tengo que probar las tres lineas xq pat dice que las preguntas o no se como es que se van a llamar, son largas. Y todavia no llego a las tres lineas me quiero matar ahre, saludos al que lea esto.
       </article>
       <form>
-        <button type="button" name="Opcion1">Comer pingüinos</button>
-        <button type="button" name="Opcion2">Comer con pingüinos</button>
+        <button id="btnOpcion1" type="button" name="Opcion1">Comer pingüinos</button>
+        <button id="btnOpcion2"type="button" name="Opcion2">Comer con pingüinos</button>
       </form>
     </section>
 
@@ -59,4 +59,30 @@
   </body>
   <script type="text/javascript" src="assets/scripts/script.js"></script>
   <script src="assets/scripts/jquery-3.4.1.min.js"></script>
+
+
+  <div hidden="hidden" id='pat' class='diapositiva'>
+  <div class='texto'>
+    texto para diapo
+  </div>
+  <div class='opcion1Texto'>
+    darle el regalo a rami
+  </div>
+  <div class="opcion1Id">
+    rami
+  </div>
+  <div class="opcion2Texto">
+    darle el regalo a jota
+  </div>
+  <div class="opcion2Id">
+    jota
+  </div>
+  <div class="srcName">
+    pat.jpg
+  </div>
+  <div class="EsFinal">
+    false
+  </div>
+</div>
+  
 </html>
