Me olvide de agregar el script al main, pero que gilastrum

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </body>
   <script type="text/javascript" src="assets/scripts/script.js"></script>
   <script src="assets/scripts/jquery-3.4.1.min.js"></script>
-
+  <script type="text/javascript" src="assets/scripts/CambioDeDiapo.js"></script>
 
   <div hidden="hidden" id='pat' class='diapositiva'>
   <div class='texto'>
