Cambios en html(Revisalo rami que puede que rompa todo je) y actualizacion de la documentacion de caminos esperando que pat haga mas de su magia

--- a/Docu/Modelo info diapositivas.html
+++ b/Docu/Modelo info diapositivas.html
@@ -1,4 +1,4 @@
-<div hidden="hidden" id='pat' class='diapositiva'>
+<div  id='pat' class='diapositiva hide'>
 	<div class='texto'>
 		texto para diapo
 	</div>
