--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="icon.png" type="image.png">
     <title>Elige tu propia aventura</title>
   </head>
-  <body>
+  <body id="bodyImg">
 
     <!-- ventana de inicio -->
     <aside>
@@ -43,47 +43,20 @@
     <footer>
       <a href="https://t.me/comosediscutenlascosas">All rights reserved Les Comofuncioners©</a>
     </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-  <!-- aqui los hidden -->
   </body>
+  <!-- aqui los hidden -->
   <script type="text/javascript" src="assets/scripts/CambioDeDiapo.js"></script>
   <script type="text/javascript" src="assets/scripts/script.js"></script>
   <script src="assets/scripts/jquery-3.4.1.min.js"></script>
   
 
-  <div hidden="hidden" id='pat' class='diapositiva'>
-  <div class='texto'>
-    texto para diapo
+  <div id='pat' class='diapositiva hide'>
+    <div class='texto'>Este es el bello pat</div>
+    <div class='opcion1Texto'>darle el regalo a rami</div>
+    <div class="opcion1Id">rami</div>
+    <div class="opcion2Texto">darle el regalo a jota</div>
+    <div class="opcion2Id">jota</div>
+    <div class="srcName">pat.jpg</div>
+    <div class="EsFinal">false</div>
   </div>
-  <div class='opcion1Texto'>
-    darle el regalo a rami
-  </div>
-  <div class="opcion1Id">
-    rami
-  </div>
-  <div class="opcion2Texto">
-    darle el regalo a jota
-  </div>
-  <div class="opcion2Id">
-    jota
-  </div>
-  <div class="srcName">
-    pat.jpg
-  </div>
-  <div class="EsFinal">
-    false
-  </div>
-</div>
-  
 </html>
