--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="icon.png" type="image.png">
+    <link rel="icon" href="icon.png" type="image/png">
     <title>Elige tu propia aventura</title>
   </head>
   <body id="bodyImg">
