--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </form>
       </section>
     </aside>
+    <img id="backImg">
     <section class="aven">
       <article id="mainText">
         “Finalmente lo hemos logrado, luego de horas y horas de manualidades, charlas filosóficas, sol, mate y muuuucha comida. El regalo de Naty O esta terminado y empaquetado, listo para ser despachado. Pero, ahora viene el problema, quién se lleva este regalo para tomar la ciclopea tarea de lograr que llegue a destino en tiempo y forma?<br>
