Fix: Texto mili

--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
     </div>
     <div id='mili' class='diapositiva hide'>
       <div class='texto'>
-        Luego de una hermosa jornada de Rol, Pat toma la Posta con el regalo entregado por Jota, ya es de noche y el colectivo tarda en venir, en eso está cuando ve venir una moto muy pegadita al cordón, en la parada acaba de abrir las puertas un 166 que si bien no le deja en su casa, al menos lo acerca en esa misma dirección y luego otro colectivo más adelante podría rectificar el rumbo.
+        Mili portadora ahora del regalo está llegando a su casa cuando algo le acapara toda su atención, junto a un container de basura se encuentra una verdadera obra de arte para su galería de Mugre-citas.
+Luego de una sesión de fotos de casi una hora advierte que es tarde.
+
       </div>
       <div class='opcion1Texto'>???</div>
       <div class="opcion1Id">???</div>
