--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
       </section>
       <section class="tyc">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          "Como funciona enviar un regalo: El juego" Naty, en tus manos esta nuestro mas sofisticado invento hasta el momento, el Time-Space Bending Reality Alteration Game System. Alias TSBRAG, (pero le decimos Roberto)
+          Por ser tu cumpleaños elegimos darte la posibilidad de ser la piloto de prueba y al mismo tiempo dejar en tus manos el destino de tu propio regalo (Ah re vagos) Una vez que aceptes esto, onda si no lo aceptás no pasa naranja y no te queda otra que hacerlo ( capaz tendríamos que haber pensado mejor esta parte) Procederás a encargarte de que el paquete elaborado con tanto amor por nosotros logre llegar a tus manos a través del tiempo y el espacio desde el domingo 22 a las 18hs. en que lo terminamos, hasta este preciso momento. Si están tocando el timbre ahora, es porque lo hiciste muy bien, a ver a ver, paciencia... Ok, falsa alarma, puede ser que haya un delay, je, hay que ajustar cositas todavía.
+          Pero por ser un prototipo muy alfa todo, solo te dejamos dos opciones a la vez del sin fin de posibilidades, ya que en pruebas anteriores a esta hubo algunos problemas y ahora al parecer hay un multiverso de Comofuncioners entrelazado con el nuestro, pero ese es oootro tema.
+          En fin, como es posible que las cosas salgan mal tenemos un plan de apoyo, nono no te vayas a asustar eh?. Conectamos este sistema con la ya probada (y aun no mejorada) Comofuncioner Time Machine que vendrá en tu ayuda para permitirte volver a un punto anterior de la historia.
+          Esperamos que lo disfrutes, ah y por cierto: Muy Feliz Cumpleaños de parte de tu familia Comofuncioner!!!”
         </p>
       </section>
       <section class="second">
